# tree-sitter-handlebars

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  RULES.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
src/: grammar.json  node-types.json  parser.c
test/: example.hbs
test/corpus/: attrs.txt  blocks.txt  comments.txt  hello.txt  tests.txt
